<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">locationservice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_external_user">external user</string>
	<string name="main_internal_user">internal user</string>
	<string name="main_user_name">user name</string>
	<string name="main_password">password</string>
	<string name="main_Remember">Remember that usernames and passwords</string>
	<string name="main_Retrieve_password">Retrieve password</string>
	<string name="main_signup">Sign Up</string>
	<string name="main_Login">Log In</string>
	
	<string name="subject_User_login">User Log In</string>
	<string name="t201">Username     </string>
    <string name="t202">Password          </string>
    <string name="t203">Confirm your password</string>
    <string name="t204">Nickname          </string>
    <string name="t205">Email address          </string>
    <string name="t206">WeChat ID</string>
    <string name="t207">Gender</string>
    <string name="t208">Occupation</string>
    <string name="t209">Hobbies</string>
    <string name="t210">Address</string>
    <string name="subject_name">name</string>
    <string name="subject_phonenumber">phone number</string>
    <string name="subject_adress">Adress</string>
    <string name="subject_sex">Sex</string>
    <string name="subject_job">Job</string>
    <string name="subject_income">Income</string>
    <string name="subject_phoneprice">Phone Prices</string>
    <string name="subject_submit">Submit</string>
    <string name="subject_back">Back</string>
    
    <string name="tab_home">Home</string>
    
    <string name="about_location">About location</string>
    <string name="about_update">Check Update</string>
    <string name="about_instructions">Instructions</string>
    
    <string name="b101">系统\n死机/重启/升级失败</string>
    <string name="b102">通信\n通话/短信/信号/数据业务</string>
    <string name="b103">应用\n第三方/系统应用</string>
    <string name="b104">WIFI\nWIFI/WIFI直连/信号</string>
    <string name="b105">蓝牙\n蓝牙相关问题</string>
    <string name="b106">定位\n位置相关/导航类</string>
    <string name="b107">存储\nSD卡/存储问题</string>
    <string name="b108">屏幕\n屏幕显示/触控类</string>
    <string name="b109">硬件\n硬件/外观/配件问题</string>
    <string name="b110">相机\n拍照/录像类问题</string>
    <string name="b111">性能\n卡顿/性能类问题</string>
    <string name="b112">功耗\n发热/耗电/充电</string>
    <string name="b113">多媒体\n音频/视频播放</string>
    <string name="b114">传感器\n指纹/震动/指南针/NFC</string>
    <string name="b115">体验类\n易用性/软硬件体验</string>
    <string name="b116">其他\n非以上问题类型</string>
    
</resources>
