<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:src="@drawable/main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/button_out"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/out_btn"
                android:gravity="center"
                android:text="@string/main_external_user"
                android:textColor="@color/main_textColor" />

            <Button
                android:id="@+id/button_in"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/in_btn"
                android:gravity="center"
                android:text="@string/main_internal_user"
                android:textColor="@color/main_textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:background="#c1e5ff"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/main_editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/main_user_name"
                android:padding="10dp"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/main_editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/main_password"
                android:padding="10dp"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/main_checkbox1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="2dp"
                android:text="@string/main_Remember"
                android:textColor="@color/main_textColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="17sp"
                android:text="@string/main_Retrieve_password"
                android:textColor="@color/main_textColor"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:layout_gravity="bottom"
       android:gravity="bottom"
       android:layout_marginBottom="15dp" >
        <Button 
            android:id="@+id/main_button_admin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/blue_bt"
            android:text="@string/main_Login"
            android:textColor="@drawable/main_text_color"
            />
        <Button 
            android:id="@+id/main_button_subject"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/blue_bt"
            android:text="@string/main_signup"
            android:textColor="@drawable/main_text_color"
            />
    </LinearLayout>

</LinearLayout>