<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff0eb"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView 
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/return_btn"/>
        <TextView 
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/about_location"
            android:textColor="#777777"
            android:textSize="18dp"/>
        <Button 
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#a9dcf8"
            />
        <ImageView 
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="right|center_vertical"
            android:src="@drawable/loading1"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#c9c9c9"
        />
        <TextView 
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="#ffffff">
            <Button 
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:background="#ffffff"
				android:gravity="left|center_vertical"
				android:paddingLeft="10dp"
				android:textColor="#777777"
				android:textSize="16dp"
				android:text="@string/about_update"
				/>
            <TextView 
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#c9c9c9"/>
            <Button 
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#777777"
                android:textSize="16dp"
                android:text="@string/about_instructions"
                />
        </LinearLayout>
        <TextView 
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        

</LinearLayout>
